[TASK] Add DB Seeder

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-<<<<<<< HEAD
+/.idea
+/.vagrant
 vendor/
 node_modules/
 npm-debug.log
@@ -8,8 +9,7 @@ bootstrap/compiled.php
 app/storage/
 
 # Laravel 5 & Lumen specific
-public/storage
-public/hot
+public/
 storage/*.key
 .env.*.php
 .env.php
@@ -19,19 +19,9 @@ Homestead.json
 
 # Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
 .rocketeer/
-=======
-/node_modules
-/public/hot
-/public/images
-/public/storage
-/public/zip
-/storage/*.key
-/vendor
-/.idea
-/.vagrant
-Homestead.json
-Homestead.yaml
+
 npm-debug.log
 yarn-error.log
-.env
->>>>>>> [INIT] First Commit
+
+/public/mix-manifest.json
+package-lock.json
