--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.1.10"
   },
   "dependencies": {
-    "bower": "^1.8.2"
+    "bower": "^1.8.2",
+    "googlemaps-v3-utility-library-latest": "^1.0.1"
   }
 }
